Fix list spacing

--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -1,9 +1,11 @@
 .list {
-  margin-bottom: 1.5rem;
+  --gap: 1.5rem;
+  margin-bottom: 3rem;
 }
 
 @media (min-width: 30rem) {
   .list {
+    --gap: 2rem;
     grid-template-columns: repeat(2, 1fr);
   }
 }
